# DogeEngine

./: .gitignore  CMakeLists.txt  DogeEngine.cpp  GlobalRenderOptions.cpp  GlobalRenderOptions.h  README.md  Reflexions.txt  arkMediator.cpp  arkMediator.h  helpers.h
Data/Resources/Shaders/: DogeCBuffers.h  DogeMaths.h  DogeSampling.h  downscale2x2.frag  downscale4x4.frag  fake.frag  fake.vert  fakeTonemap.frag  fillRed.frag  grad.frag  keepRedOnly.frag  screenQuadById.frag  screenQuadById.vert  screenQuadByVertices.frag  screen_leadr.frag  screen_leadr.vert  simple.frag  simple.vert  simple3d.frag  simple3d.vert  simple_tesc.glsl  simple_tese.glsl  tonemap.frag
Graphics/: CMakeLists.txt  Camera.cpp  Camera.h  Cubemap.cpp  Cubemap.h  Doge.cpp  Doge.h  EnvMap.cpp  EnvMap.h  FBO.cpp  FBO.h  GL.cpp  GL.h  GlobalGraphicsDefines.h  IBO.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Orthobase.cpp  Orthobase.h  PipelineState.cpp  PipelineState.h  RenderGraph.cpp  RenderGraph.h  RenderPass.cpp  RenderPass.h  RenderableObject.cpp  RenderableObject.h  Renderer.cpp  Renderer.h  Renderer2.cpp  Renderer2.h  Scene.cpp  Scene.h  ScreenPass.cpp  ScreenPass.h  (+22 more)
MathsTools/: mat4.cpp  mat4.h  maths.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.h
Utils/: codegenerators.h
arkQTGUI/: CMakeLists.txt  arkAbstractMediator.h  arkMainWindow.cpp  arkMainWindow.h  arkMediatorWidget.cpp  arkMediatorWidget.h  arkMenuBar.cpp  arkMenuBar.h  arkOpenGLWidget.cpp  arkOpenGLWidget.h  arkParamsPanel.cpp  arkParamsPanel.h
